syntax = "proto3";
import "commontype/SubInfo.proto";
import "commontype/TopicMessage.proto";

option java_multiple_files = true;
option java_package = "com.zachary.bifromq.mqtt.inbox.rpc.proto";;
option java_outer_classname = "MessageReceiverProtos";

package mqttbroker;

service OnlineInboxBroker {
  rpc write (stream WriteRequest) returns (stream WriteReply);

  rpc hasInbox (HasInboxRequest) returns (HasInboxReply);
}

message DeliveryPack{
  commontype.TopicMessagePack messagePack = 1;
  repeated commontype.SubInfo subscriber = 2;
}

message WriteRequest {
  uint64 reqId = 1;
  repeated DeliveryPack deliveryPack = 2;
}

message WriteResult{
  enum Result {
    OK = 0;
    NO_INBOX = 1;
  }
  commontype.SubInfo subInfo = 1;
  Result result = 2;
}

message WriteReply {
  uint64 reqId = 1;
  repeated WriteResult result = 2;
}

message HasInboxRequest {
  uint64 reqId = 1;
  string inboxId = 2;
}

message HasInboxReply {
  uint64 reqId = 1;
  bool result = 2;
}

